--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "033-e-learning-website",
+  "name": "server",
   "version": "1.0.0",
-  "description": "e-learning website",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "anoop wilson",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2"
